--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- 关键修改：viewport-fit=cover 适配刘海屏，禁止缩放 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>猜疑链：黑暗森林 (终极适配版)</title>
+    <title>猜疑链：黑暗森林</title>
     <style>
         :root {
             /* 定义颜色变量 */
