--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
     <div id="landscape-lock">
         <svg viewBox="0 0 24 24"><path d="M17,1.01L7,1C5.9,1,5,1.9,5,3v18c0,1.1,0.9,2,2,2h10c1.1,0,2-0.9,2-2V3C19,1.9,18.1,1.01,17,1.01z M17,19H7V5h10V19z"/></svg>
         <h2>为了最佳体验<br>请将手机旋转至横屏</h2>
+        <button id="lock-fs-btn" style="margin-top:15px; border-color: #00e676; color:#00e676;">🖥️ 点击进入全屏</button>
     </div>
 
     <button id="settings-btn">⚙️</button>
@@ -555,6 +556,17 @@ document.addEventListener('DOMContentLoaded', () => {
     }
     checkDesktopEnv();
     window.addEventListener('resize', checkDesktopEnv);
+
+    // === 新增：强制横屏界面点击全屏逻辑 ===
+    const lockFsBtn = document.getElementById('lock-fs-btn');
+    if(lockFsBtn) {
+        lockFsBtn.addEventListener('click', () => {
+             const elem = document.documentElement;
+            if (elem.requestFullscreen) { elem.requestFullscreen(); } 
+            else if (elem.webkitRequestFullscreen) { elem.webkitRequestFullscreen(); } 
+            else if (elem.msRequestFullscreen) { elem.msRequestFullscreen(); }
+        });
+    }
 
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
