--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                         <input type="number" id="host-id-input" class="gm-input" style="width: 120px; text-align: center; letter-spacing: 2px;" placeholder="6位号码" maxlength="6">
                         <button id="join-game-btn" style="border-color: #29b6f6; color: #29b6f6; font-size: 14px; padding: 8px 15px;">加入</button>
                     </div>
-                    <div id="join-status-msg" style="font-size: 12px; color: #aaa; margin-top: 5px;">当前未连接</div>
+                    <div id="join-status-msg" style="font-size: 12px; color: #aaa; margin-top: 5px;">(局域网联机)当前未连接</div>
                 </div>
             </div>
 
